<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/kansai"
            android:contentDescription="TODO" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="240dp"
                    android:layout_height="351dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="79dp"
                    android:alpha="0.7"
                    android:contentDescription="@string/greyimg"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/grey" />

                <FrameLayout
                    android:layout_width="200dp"
                    android:layout_height="350dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="97dp"
                    tools:ignore="UselessLeaf">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="350dp">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="16dp"
                            android:text="@string/login" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView14"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:contentDescription="@string/test"
                                    app:srcCompat="@drawable/twitter" />

                                <ImageView
                                    android:id="@+id/imageView15"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:contentDescription="@string/test"
                                    app:srcCompat="@drawable/youtube" />

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="41dp"
                                    android:gravity="center"
                                    android:text="@string/user_nmae"
                                    android:textColor="@android:color/holo_blue_dark"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="41dp"
                                    android:gravity="center"
                                    android:text="@string/password"
                                    android:textColor="@android:color/holo_blue_dark"
                                    android:textSize="18sp" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView12"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:contentDescription="@string/test"
                                    app:srcCompat="@drawable/instagram" />

                                <ImageView
                                    android:id="@+id/imageView13"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:contentDescription="@string/test"
                                    app:srcCompat="@drawable/googleplus" />

                                <EditText
                                    android:id="@+id/editText2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/UserName"
                                    android:inputType="textPersonName" />

                                <EditText
                                    android:id="@+id/editText3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/Password"
                                    android:inputType="textPersonName" />

                            </LinearLayout>
                        </LinearLayout>

                    </RelativeLayout>

                </FrameLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="スマートテック・ベンチャーズ"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </FrameLayout>

    </FrameLayout>

</LinearLayout>